Ajustado posição do texto

--- a/ExercicioAP1/home.html
+++ b/ExercicioAP1/home.html
@@ -28,14 +28,12 @@
 <body>
   <nav class="navbar navbar-expand-sm bg-primary navbar-light">
       <a class="nav-link" href="https://www.wyden.com.br/unimetrocamp"><img src="img/logounimetrocamp-wyden.png"></a>
-      <a class="bg-primary justify-content-center">Projeto de aula de Desenvolvimento de Software | Professor Alan Gonçalves</a>
+      <a class="bg-primary">Projeto de aula de Desenvolvimento de Software | Professor Alan Gonçalves</a>
   </nav>
     <br>
+  <div class="container was-validated align-content-center">
     <h1>Calculadora de Frete</h1>
     <br>
-  <div class="container was-validated">
-<!--    <form name="consultaCep" method="post">-->
-
       <div class="form-group">
         <label><strong>CEP:</strong></label>
         <input class="form-control col-4" type="text" id="cep" placeholder="Insira o CEP" name="text" required>
@@ -53,7 +51,6 @@
       <div>
         <button class="btn btn-primary">Calcular</button>
       </div>
-<!--    </form>-->
   </div>
 
     <br>
