Corrigido erro que não mostrava o resultado

--- a/ExercicioAP1/home.html
+++ b/ExercicioAP1/home.html
@@ -26,9 +26,9 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm bg-primary navbar-light">
+  <nav class="navbar navbar-light" style="background-color: #5997de">
       <a class="nav-link" href="https://www.wyden.com.br/unimetrocamp"><img src="img/logounimetrocamp-wyden.png"></a>
-      <a class="bg-primary">Projeto de aula de Desenvolvimento de Software | Professor Alan Gonçalves</a>
+    <a class="text-right" style="font-size: 22px; color: #ffffff">Projeto de aula de Desenvolvimento de Software | Professor Alan Gonçalves</a>
   </nav>
     <br>
   <div class="container was-validated align-content-center">
@@ -53,8 +53,7 @@
       </div>
   </div>
 
-    <br>
-    <br>
+  <main>
     <div class="container">
       <div class="row">
         <div class="col-sm">
